add logo and container styles

--- a/style.css
+++ b/style.css
@@ -18,3 +18,17 @@ header {
 	margin: auto;
 	align-items: center;
 }
+
+.logo-container,
+.nav-links,
+.cart {
+	display: flex;
+}
+
+.logo-container {
+	flex: 1;
+}
+.logo {
+	font-weight: 400;
+	margin: 5px;
+}
