--- a/style.css
+++ b/style.css
@@ -32,3 +32,19 @@ header {
 	font-weight: 400;
 	margin: 5px;
 }
+nav {
+	flex: 2;
+}
+.nav-links {
+	justify-content: space-around;
+	list-style: none;
+}
+.nav-link {
+	color: #5f5f79;
+	font-size: 18px;
+	text-decoration: none;
+}
+.cart {
+	flex: 1;
+	justify-content: flex-end;
+}
