--- a/style.css
+++ b/style.css
@@ -192,6 +192,13 @@ nav {
 	background-color: transparent
 }
 
+.view {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .hidden {
 	display: none
 }
