--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header {
 .logo {
 	font-weight: 400;
 	margin: 5px;
+	cursor: pointer;
 }
 nav {
 	flex: 2;
@@ -45,6 +46,8 @@ nav {
 	border: none;
 	font-size: 18px;
 	text-decoration: none;
+	cursor: pointer;
+	outline: none;
 }
 .cart {
 	flex: 1;
@@ -189,14 +192,28 @@ nav {
 
 .arrow-button {
 	border: none;
-	background-color: transparent
+	background-color: transparent;
+	cursor: pointer;
+	outline: none;
 }
 
 .view {
+	margin-top: 2em;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.mini-view {
+	width: 45em;
+}
+
+.contact-info {
+	display: flex;
+	flex-direction: column;
+	border: 2px solid black;
+	padding: 2em;
 }
 
 .hidden {
