--- a/style.css
+++ b/style.css
@@ -156,6 +156,15 @@ nav {
 	}
 }
 
+@keyframes fade {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
 
 @media screen and (max-width: 1024px) {
 	.presentation {
@@ -203,6 +212,7 @@ nav {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	animation: fade .75s ease;
 }
 
 .mini-view {
