--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ nav {
 	outline: none;
 }
 .cart {
+	color: #5f5f79;
 	flex: 1;
 	justify-content: flex-end;
 	height: 15px;
@@ -240,6 +241,7 @@ nav {
 }
 
 .contact-info {
+	color: #5f5f79;
 	display: flex;
 	flex-direction: column;
 	border: 1px solid black;
@@ -258,4 +260,12 @@ tr {
 	justify-content: space-between;
 	font-size: 12px;
 	padding: .5em;
+}
+
+.darkWhite {
+	color: white;
+}
+
+.dark {
+	background-color: black;
 }
